[metadata]
name = pwca
version = 0.0.1
author = Lionel London
author_email = lionel.london@
license = GPL-3.0-or-later
license_files = LICENSE
url = https://github.com/cardiffgravity/PhenomDCP

[options]
packages = find:
include_package_data = True
# requirements
python_requires = >=2.7,<3.0
setup_requires =
	setuptools
	wheel
install_requires =
	nrutils @ git+https://github.com/llondon6/nrutils_dev.git
	numpy
	positive

[options.packages.find]
include = pwca*

[options.package_data]
pwca = data/*.json, data/*.pickle
