[metadata]
name = pwca
author = Lionel London
author_email = lionel.london@
license = GPL-3.0-or-later
license_files = LICENSE
url = https://github.com/cardiffgravity/PhenomDCP

[options]
packages = find:
include_package_data = True
# requirements
python_requires = >=3.7
setup_requires =
	setuptools >= 38.2.5
	setuptools-scm
	wheel
install_requires =
	nrutils @ git+https://github.com/llondon6/nrutils_dev.git@nrutils3
	numpy
	positive

[options.packages.find]
include = pwca*

[options.package_data]
pwca = data/*.json, data/*.pickle
